update pdf_processor to use pytesseract and poppler

--- a/requirements.txt
+++ b/requirements.txt
@@ -1,10 +1,13 @@
-flask
-python-dotenv
-openai
-qdrant-client
-PyPDF2
-dropbox
+flask~=3.1.0
+python-dotenv~=1.0.1
+openai~=1.68.2
+qdrant-client~=1.13.3
+PyPDF2~=3.0.1
+dropbox~=12.0.2
 langchain
 langchain-openai
 nltk
-tiktoken
+tiktoken~=0.9.0
+numpy~=2.2.4
+pytesseract~=0.3.13
+pdf2image~=1.17.0
