--- a/requirements.txt
+++ b/requirements.txt
@@ -9,5 +9,7 @@ langchain-openai
 nltk
 tiktoken~=0.9.0
 numpy~=2.2.4
-pytesseract~=0.3.13
 pdf2image~=1.17.0
+google-cloud-vision>=3.4.0
+PyMuPDF>=1.22.1
+protobuf~=5.29.4
